Fix image stretching on spot detail page

--- a/frontend/src/assets/stylesheets/spots/spot_detail.css
+++ b/frontend/src/assets/stylesheets/spots/spot_detail.css
@@ -26,8 +26,8 @@
 }
 
 .spot-detail.main-image-wrapper img {
+  transform: scale(1.05);
   width: 100%;
-  height: 100%;
 }
 
 .spot-detail.main-image-wrapper img:hover {
